[package]
name = "chorust"
version = "0.1.0"
edition = "2021"

[dependencies]
squared_api_wrapper = { git = "https://github.com/nevermille/squared_api_wrapper", branch = "develop" }
anyhow = "1.0.93"
curl = "0.4.47"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
getopts = "0.2.21"
url-builder = "0.1.1"
form_urlencoded = "1.2.1"
base64 = "0.22.1"
